--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -17,7 +17,7 @@ html
                 .item
                     .item-content
                         .icon-info
-                            a(href="#")
+                            a(href="/goods/list")
                                 img(src="images/002 .png")
                         .text 仓储物流管理
                 .item
