--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,7 @@ html
                 display: inline-block;
                 float: left;
                 width:70%;
+                margin-left: 20px;
             }
     body
         div#navs
