--- a/views/pages/index.jade
+++ b/views/pages/index.jade
@@ -1,47 +1,86 @@
-doctype
-html
-    head
-        meta(charset="utf-8")
-        title #{title}
-        include ../includes/head
-    body
-        block content
-            .content
-                img(src="images/bg.png" width="100%", height="660px")
-                .item
-                    .item-content
-                        .icon-info
-                            a(href="/basic")
-                                img(src="images/001 .png")
-                        .text 基本信息管理
-                .item
-                    .item-content
-                        .icon-info
-                            a(href="/goods/list")
-                                img(src="images/002 .png")
-                        .text 仓储物流管理
-                .item
-                    .item-content
-                        .icon-info
-                            a(href="#")
-                                img(src="images/003 .png")
-                        .text 报表管理
-                .item
-                    .item-content
-                        .icon-info
-                            a(href="#")
-                                img(src="images/004 .png")
-                        .text 财务管理
+extends ../layout
 
-                .item
-                    .item-content
-                        .icon-info
-                            a(href="#")
-                                img(src="images/005 .png")
-                        .text 系统维护
-                .item
-                    .item-content
-                        .icon-info
-                            a(href="#")
-                                img(src="images/006 .png")
-                        .text 系统管理
+block content
+    .navbar.navbar-default.navbar-fixed-bottom
+        .container
+            .navbar-header
+                a.navbar-brand(href="/") 物流仓储系统
+            if user
+                p.navbar-text.navbar-right
+                    span 欢迎您,#{user.name}
+                    span &nbsp;|&nbsp;
+                    a.navbar-link(href="/logout") 登出
+            else
+                p.navbar-text.navbar-right
+                    a.navbar-link(href="#", data-toggle="modal", data-target="#signupModal") 注册
+                    span &nbsp;|&nbsp;
+                    a.navbar-link(href="#", data-toggle="modal", data-target="#signinModal") 登录
+    #signupModal.modal.fade
+        .modal-dialog
+            .modal-content
+                form(method="POST", action="/user/signup")
+                    .modal-header 注册
+                    .modal-body
+                        .form-group
+                            label(for="signupName") 用户名
+                            input#signupName.form-control(name="user[name]", type="text")
+                        .form-group
+                            label(for="signupPassword") 密码
+                            input#signupPassword.form-control(name="user[password]", type="text")
+                    .modal-footer
+                        button.btn.btn-default(type="button", data-dismiss="modal") 关闭
+                        button.btn.btn-success(type="submit") 提交
+    #signinModal.modal.fade
+        .modal-dialog
+            .modal-content
+                form(method="POST", action="/user/signin")
+                    .modal-header 登录
+                    .modal-body
+                        .form-group
+                            label(for="signinName") 用户名
+                            input#signinName.form-control(name="user[name]", type="text")
+                        .form-group
+                            label(for="signinPassword") 密码
+                            input#signinPassword.form-control(name="user[password]", type="text")
+                    .modal-footer
+                        button.btn.btn-default(type="button", data-dismiss="modal") 关闭
+                        button.btn.btn-success(type="submit") 提交
+    .content
+        img(src="images/bg.png" width="100%", height="660px")
+        .item
+            .item-content
+                .icon-info
+                    a(href="/basic")
+                        img(src="images/001 .png")
+                .text 基本信息管理
+        .item
+            .item-content
+                .icon-info
+                     a(href="/goods/list")
+                        img(src="images/002 .png")
+                .text 仓储物流管理
+        .item
+            .item-content
+                .icon-info
+                    a(href="#")
+                        img(src="images/003 .png")
+                .text 报表管理
+        .item
+            .item-content
+                .icon-info
+                    a(href="#")
+                        img(src="images/004 .png")
+                .text 财务管理
+
+        .item
+            .item-content
+                .icon-info
+                    a(href="#")
+                        img(src="images/005 .png")
+                .text 系统维护
+        .item
+            .item-content
+                .icon-info
+                    a(href="#")
+                        img(src="images/006 .png")
+                .text 系统管理
